# DFTDraw

./: CMakeLists.txt  README.md
src/: dft.cpp  dft.hpp  epicycloid.cpp  epicycloid.hpp  input.cpp  input.hpp  main.cpp  visualizer.cpp  visualizer.hpp
